--- a/disposable_email_blacklist.conf
+++ b/disposable_email_blacklist.conf
@@ -2602,3 +2602,15 @@ zxcv.com
 zxcvbnm.com
 zzi.us
 zzz.com
+ichigo.me
+f5.si
+macr2.com
+neko2.net
+ruru.be
+http://neko2.net/
+iatechnologiesllc.com
+mailtbi.com
+advetiral.com
+fastpaydaycenter.com
+webmizermedia.com
+upboox.com
